--- a/public/html/index.html
+++ b/public/html/index.html
@@ -14,16 +14,16 @@
 			<h1 class="title">Just Write</h1>
 		</div>
 		<ul ng-show="loggedIn" class="view container text-center nav-list">
-			<li><a class="btn btn-default" href="/#/">home</a></li>
+			<li><a class="btn btn-default btn-pink" href="/#/">home</a></li>
 			 <span style="font-size: 0.8rem;"></span>
-			<li><a class="btn btn-default" href="/#/browse">browse</a></li>
+			<li><a class="btn btn-default btn-pink" href="/#/browse">browse</a></li>
 			 <span style="font-size: 0.8rem;"></span>
-			<li><a class="btn btn-default" href="/#/profile">profile</a></li>
+			<li><a class="btn btn-default btn-pink" href="/#/profile">profile</a></li>
 			<span style="font-size: 0.8rem;"></span>
-			<li><a class="btn btn-default" href="/#/submit">submit</a></li>
+			<li><a class="btn btn-default btn-pink" href="/#/submit">submit</a></li>
 			 <span style="font-size: 0.8rem;"></span>
 			 <span style="font-size: 0.8rem;"></span>
-			<li><a class="btn btn-default" href="/auth/logout">log out</a></li>
+			<li><a class="btn btn-default btn-pink" href="/auth/logout">log out</a></li>
 		</ul>
 		<form ng-hide="loggedIn" class="view container text-center nav-list login-form" method="POST" action="auth/login">
 			<input name="username" type="text" placeholder="username...">
