--- a/public/html/private/browse.html
+++ b/public/html/private/browse.html
@@ -1,7 +1,7 @@
 <div class="view container">
 	<div class="browse-heading box purple-box" style="position: relative;">
 		<h2 style="display: inline;">Users</h2>
-		<a class="btn" href="/#/browse/users" style="position: absolute; right: 1rem; top: 1rem;">show all</a>
+		<a class="btn btn-pink" href="/#/browse/users" style="position: absolute; right: 1rem; top: 1rem;">show all</a>
 	</div>
 	<div class="row">
 		<div class="dynamic-box content-box blue-box box col-xs-12 col-sm-4">
@@ -33,7 +33,7 @@
 	</div>
 	<div class="browse-heading box purple-box" style="position: relative;">
 		<h2 style="display: inline;">Stories</h2>
-		<a class="btn" href="/#/browse/stories" style="position: absolute; right: 1rem; top: 1rem;">show all</a>
+		<a class="btn btn-pink" href="/#/browse/stories" style="position: absolute; right: 1rem; top: 1rem;">show all</a>
 	</div>
 	<div class="row">
 		<div class="dynamic-box content-box blue-box box col-xs-12 col-sm-4">
@@ -76,7 +76,7 @@
 
 	<div class="browse-heading box purple-box" style="position: relative;">
 		<h2 style="display: inline;">Poems</h2>
-		<a class="btn" href="/#/browse/poems" style="position: absolute; right: 1rem; top: 1rem;">show all</a>
+		<a class="btn btn-pink" href="/#/browse/poems" style="position: absolute; right: 1rem; top: 1rem;">show all</a>
 	</div>
 	<div class="row">
 		<div class="dynamic-box content-box blue-box box col-xs-12 col-sm-4">
@@ -118,7 +118,7 @@
 	</div>
 	<div class="browse-heading box purple-box" style="position: relative;">
 		<h2 style="display: inline;">Essays</h2>
-		<a class="btn" href="/#/browse/essays" style="position: absolute; right: 1rem; top: 1rem;">show all</a>
+		<a class="btn btn-pink" href="/#/browse/essays" style="position: absolute; right: 1rem; top: 1rem;">show all</a>
 	</div>
 	<div class="row">
 		<div class="dynamic-box content-box blue-box box col-xs-12 col-sm-4">
