--- a/public/html/private/submissionform.html
+++ b/public/html/private/submissionform.html
@@ -20,6 +20,6 @@
 		<textarea class="medium-area" name="description"></textarea>
 		<div class="form-heading">Share your writing below! Type a [p] wherever you would like to insert a line break.<span style="color: red; font-size: 1.5rem;"> Required!</span></div>
 		<textarea class="large-area" name="content" placeholder="Your writing goes here!"></textarea>
-		<input class="btn btn-default" type="submit" value="submit">
+		<input class="btn btn-default btn-pink" type="submit" value="submit">
 	</form>
 </div>
