--- a/public/html/public/newuser.html
+++ b/public/html/public/newuser.html
@@ -17,6 +17,6 @@
 		<textarea class="small-area" placeholder="Favorite books..." name="favBooks"></textarea>
 		<div>Who are some of your favorite authors? Enter a comma and space separated list, for example: <span><b>Laurie Halse Anderson, Stephen King, Markus Zusak</b></span> You can fill this out later.</div>
 		<textarea class="small-area" placeholder="Favorite writers..." name="favWriters"></textarea>
-		<button class="btn btn-default" type="submit">sign up</button>
+		<button class="btn btn-default btn-pink" type="submit">sign up</button>
 	</form>
 </div>
