--- a/public/html/index.html
+++ b/public/html/index.html
@@ -8,22 +8,19 @@
 		<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.7/angular.min.js"></script>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.4.7/angular-route.min.js"></script>
 		<script src="/js/main.js"></script>
+		<script src="/js/factory.js"></script>
 	</head>
 	<body ng-controller="mainController">
 		<div class="view container text-center nav-list">
 			<h1 class="title">Just Write</h1>
 		</div>
 		<ul ng-show="loggedIn" class="view container text-center nav-list">
-			<li><a class="btn btn-default btn-pink" href="/#/">home</a></li>
-			 <span style="font-size: 0.8rem;"></span>
-			<li><a class="btn btn-default btn-pink" href="/#/browse">browse</a></li>
-			 <span style="font-size: 0.8rem;"></span>
-			<li><a class="btn btn-default btn-pink" href="/#/profile">profile</a></li>
-			<span style="font-size: 0.8rem;"></span>
-			<li><a class="btn btn-default btn-pink" href="/#/submit">submit</a></li>
-			 <span style="font-size: 0.8rem;"></span>
-			 <span style="font-size: 0.8rem;"></span>
-			<li><a class="btn btn-default btn-pink" href="/auth/logout">log out</a></li>
+			<li><a class="btn btn-pink" href="/#/">home</a></li>
+			<li><a class="btn btn-pink" href="/#/browse">browse</a></li>
+			<li><a class="btn btn-pink" href="/#/profile">profile</a></li>
+			<li><a class="btn btn-pink" href="/#/submit">submit</a></li>
+			<li><a class="btn btn-pink" href="/#/account">account</a></li>
+			<li><a class="btn btn-pink" href="/auth/logout">log out</a></li>
 		</ul>
 		<form ng-hide="loggedIn" class="view container text-center nav-list login-form" method="POST" action="auth/login">
 			<input name="username" type="text" placeholder="username...">
