--- a/public/html/public/intro.html
+++ b/public/html/public/intro.html
@@ -9,8 +9,8 @@
 				</div>
 				<ul style="text-align: left;">
 					<h3>Recent Updates</h3>
-					<li><b>Updated browse page:</b>
-					Check out the new browse page! You can now view all users and submissions on a separate page, sorted various ways.
+					<li><b>Updated browse:</b>
+					Dropdown menu added to make browsing more user-friendly.
 					</li>
 					<li><b>URL:</b> 
 					The site can now be found
