--- a/public/html/index.html
+++ b/public/html/index.html
@@ -16,17 +16,6 @@
 			<h1 class="title">Just Write</h1>
 		</div>
 
-<!--     <span uib-dropdown on-toggle="toggled(open)">
-      <a href id="simple-dropdown" uib-dropdown-toggle>
-        Click me for a dropdown, yo!
-      </a>
-      <ul class="uib-dropdown-menu" aria-labelledby="simple-dropdown">
-        <li ng-repeat="choice in items">
-          <a href>{{choice}}</a>
-        </li>
-      </ul>
-    </span> -->
-
 		<ul ng-controller="dropdownController" ng-show="loggedIn" class="view container text-center nav-list">
 			<li><a class="btn btn-pink" href="/#/">home</a></li>
 			<li uib-dropdown on-toggle="toggled(open)">
@@ -39,7 +28,7 @@
 			</li>
 			<li><a class="btn btn-pink" href="/#/profile">profile</a></li>
 			<li><a class="btn btn-pink" href="/#/submit">submit</a></li>
-			<li><a class="btn btn-pink" href="/#/account">account</a></li>
+			<!-- <li><a class="btn btn-pink" href="/#/account">account</a></li> -->
 			<li><a class="btn btn-pink" href="/auth/logout">log out</a></li>
 		</ul>
 		<form ng-hide="loggedIn" class="view container text-center nav-list login-form" method="POST" action="auth/login">
