--- a/public/html/index.html
+++ b/public/html/index.html
@@ -11,31 +11,35 @@
 		<script src="/js/main.js"></script>
 		<script src="/js/factory.js"></script>
 	</head>
-	<body ng-controller="mainController">
-		<div class="view container text-center nav-list">
-			<h1 class="title">Just Write</h1>
-		</div>
+	<body id="top" ng-controller="mainController">
+		<!-- <div class="view container text-center nav-list"> -->
+		<div class="fixed-header">
+			<div>
+				<h1>Just Write</h1>
+				<form ng-hide="loggedIn" method="POST" action="auth/login">
+					<input name="username" type="text" placeholder="username...">
+					<input type="password" name="password" placeholder="password...">
+					<input class="btn-blue-2 btn-default btn" type="submit" value="log in">
+				</form>
+			</div>
 
-		<ul ng-controller="dropdownController" ng-show="loggedIn" class="view container text-center nav-list">
-			<li><a class="btn btn-pink" href="/#/">home</a></li>
-			<li uib-dropdown on-toggle="toggled(open)">
-				<a id="simple-dropdown" uib-dropdown-toggle class="btn btn-pink" href="/#/browse">browse...</a>
-				<ul class="blue-box uib-dropdown-menu" aria-labelledby="simple-dropdown">
-					<li class="dropdown-item" ng-repeat="choice in items">
-						<a href="/#/browse/{{choice}}">{{choice}}</a>
-					</li>
-				</ul>
-			</li>
-			<li><a class="btn btn-pink" href="/#/profile">profile</a></li>
-			<li><a class="btn btn-pink" href="/#/submit">submit</a></li>
-			<!-- <li><a class="btn btn-pink" href="/#/account">account</a></li> -->
-			<li><a class="btn btn-pink" href="/auth/logout">log out</a></li>
-		</ul>
-		<form ng-hide="loggedIn" class="view container text-center nav-list login-form" method="POST" action="auth/login">
-			<input name="username" type="text" placeholder="username...">
-			<input type="password" name="password" placeholder="password...">
-			<input class="btn-pink btn-default btn" type="submit" value="log in">
-		</form>
+			<ul ng-controller="dropdownController">
+				<li><a href="/#/">home</a> </li>
+				<li uib-dropdown on-toggle="toggled(open)">
+					<a id="simple-dropdown" uib-dropdown-toggle href="/#/browse">browse...</a>
+					<ul class="blue-box uib-dropdown-menu" aria-labelledby="simple-dropdown">
+						<li class="dropdown-item" ng-repeat="choice in items">
+							<a href="/#/browse/{{choice}}">{{choice}}</a>
+						</li>
+					</ul>
+				</li>
+				<li ng-show="loggedIn"><a href="/#/profile">profile</a></li>
+				<li ng-show="loggedIn"><a href="/#/submit">submit</a></li>
+				<!-- <li><a href="/#/account">account</a></li> -->
+				<li><a href="/#/signup">sign up</a></li>
+				<li ng-show="loggedIn"><a href="/auth/logout">log out</a></li>
+			</ul>
+		</div>
 		<br>
 		<div ng-view>
 		</div>
