--- a/public/html/public/intro.html
+++ b/public/html/public/intro.html
@@ -9,17 +9,16 @@
 				</div>
 				<ul style="text-align: left;">
 					<h3>Recent Updates</h3>
-					<li><b>Updated browse:</b>
-					Dropdown menu added to make browsing more user-friendly.
+					<li><b>Edit user profile:</b>
+					Select "profile" under the "my account" tab to edit your information.
 					</li>
-					<li><b>URL:</b> 
-					The site can now be found
-					at just-write.net.
+					<li><b>Edit and delete submissions:</b> 
+					At last, you can edit and remove submissions. Select "submissions" under the "my account" tab.
 					</li>
-					<h3>Upcoming updates:</h3>
+<!-- 					<h3>Upcoming updates:</h3>
 					<li><b>Edit:</b>
 					The ability to edit submissions and user profiles is in progress.
-					</li>
+					</li> -->
 				</ul>
 			</div>
 		</div>
