--- a/public/html/index.html
+++ b/public/html/index.html
@@ -3,6 +3,7 @@
 	<head>
 		<meta charset="utf-8">
 		<link href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.5/css/bootstrap.css" rel="stylesheet" type="text/css">
+		<link href='https://fonts.googleapis.com/css?family=Jura' rel='stylesheet' type='text/css'>
 		<link href='https://fonts.googleapis.com/css?family=Khula:400,700|Shadows+Into+Light' rel='stylesheet' type='text/css'>
 		<link href="/css/styles.css" rel="stylesheet" type="text/css">
 		<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.7/angular.min.js"></script>
